# aac-tactics

./: .gitignore  CHANGELOG.md  Makefile  README.md  _CoqProject  _RocqProject  dune-project  meta.yml  rocq-aac-tactics.opam
.github/workflows/: docker-action.yml
docs/coqdoc/: AAC_tactics.AAC.html  AAC_tactics.Caveats.html  AAC_tactics.Instances.html  AAC_tactics.Tutorial.html  AAC_tactics.Utils.html
src/: aac.mlg  aac_plugin.mlpack  aac_rewrite.ml  dune  helper.mli  matcher.mli  print.ml  print.mli  rocq.ml  rocq.mli  theory.ml  theory.mli
tests/: aac_135.v  aac_144.v
theories/: AAC.v  Constants.v  Tutorial.v  dune
